--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <td>
         <h1>Daniel Armitt</h1>
         <a href="https://drive.google.com/open?id=0ByNbgZ6txMMebnZBbFpvVGFXU2c">Click here for full Resume</a>
-        <a href="Hobbies.html">My Hobbies</a>
-        <a href="Contact.html">Contact Me</a>
+        <a href="hobbies.html">My Hobbies</a>
+        <a href="contact.html">Contact Me</a>
         <a href="work-experience.html">Work Experience</a>
         <a href="skills.html">Skills</a>
         <p><em>IT Professional with 5+ Years Experience</em></p>
