--- a/work-experience.html
+++ b/work-experience.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Work Experience</h1>
-  <a href="index.hmtl">Return</a>
+  <a href="index.html">Return</a>
   <table>
     <thead>
       <tr>
