--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="o365img" src="images\o365.png" alt="O365">
+        <img class="o365img" src="images\O365.png" alt="O365">
         <h3>Office 365</h3>
         <p>I am currently working in a deeply Office 365 integrated environment where we take advantage of all available Microsoft 365 applications.</p>
       </div>
